Fix game code being reused when game ends
